--- a/style.css
+++ b/style.css
@@ -145,3 +145,20 @@ footer {
   color: #777;
   border-top: 1px solid #222;
 }
+.contact {
+  border-top: 1px solid #222;
+  padding: 60px 20px;
+  max-width: 800px;
+  margin: auto;
+  text-align: center;
+}
+
+.contact a {
+  color: #6EC1E4;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.contact a:hover {
+  color: #B983FF;
+}
